# ki-effectful

./: CHANGELOG.md  LICENSE.md  README.md  flake.nix  ki-effectful.cabal
.github/workflows/: haskell-ci.yml
src/Effectful/: Ki.hs
test/: Main.hs
