cabal-version:      3.0
name:               ki-effectful
version:            0.0.1.0
homepage:
  https://github.com/TristanCacqueray/ki-effectful#readme

bug-reports:
  https://github.com/TristanCacqueray/ki-effectful/issues

author:             Tristan de Cacqueray
maintainer:         tdecacqu@redhat.com
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location: https://github.com/TristanCacqueray/ki-effectful

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields
    -fhide-source-paths -Wno-unused-do-bind
    -j

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules: Effectful.Ki
  build-depends:
    , base            <=4.17
    , effectful-core  >=1.0 && <1.3
    , stm
    , ki

test-suite ki-effectful-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , base
    , effectful-core
    , ki-effectful
    , stm
    , tasty
    , tasty-hunit
